Fix alignment of navbar icons and account button
[#184975023]

--- a/src/components/navButtons/newstyle.module.less
+++ b/src/components/navButtons/newstyle.module.less
@@ -146,6 +146,8 @@
   color: white;
   margin: 13px 0;
   text-align: left;
+  width: fit-content;
+  white-space: nowrap;
 
   svg {
     stroke: white;
